fix: swagger {id} for routes needing id
